all posts routes now fully working :-)
