# src/routes/index.ts
@@ -7,6 +7,10 @@ export * from "./oauth";
 export * from "./login";
 export * from "./register";
 export * from "./swagger";
+export * from "./posts";
+export * from "./comments";
+export * from "./categories";
+export * from "./tags"
 
 
 
